--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web promocional de Aixa Frazonni, dedicada al arte y en ayudar a mejorar marcas en base s sus objetivos."
+      
     />
+    <meta name="palabras clave" content="Content Creator, Community Manager, Fotografia, Filmmaker" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
